--- a/video.html
+++ b/video.html
@@ -15,9 +15,7 @@
 		<button  id = "faster">Speed Up</button>
 		<button  id = "skip">Skip Ahead</button>
 	</div>
-
 	<figure>
-
 		<video class = "video" 
 			autoplay="false" 
 			width="640" 
@@ -40,7 +38,7 @@
 	<button id = "orig">Original</button>
 
 	<p>Video courtesy of Allison Sweet.</p>
-
 </main>
+<script src="js/video.js"></script>
 </body> 
 </html>
